--- a/promotion.css
+++ b/promotion.css
@@ -80,38 +80,42 @@
 } 
 .promo1{
     border: 1px solid black;
-    height: 493px;
+    height: 400px;
     width:25%;
     background-color: whitesmoke;
     margin-left: 15%;
     box-shadow: 5px 10px 8px 10px #888888;
 }
 
-.promo1 h5{
+.place{
     font-family: Segoe UI , sans-serif;
-    color: #707070;
+    color:#707070;
     margin-left: 2%;
-    margin-top: 2%;
-    position: relative;
+    margin-top: 4%;
+}
+.maps{
+    margin-top: -9%;
+}
+.depart{
+    font-family: Segoe UI , sans-serif;
+    color:#707070;
+    margin-top: -12%;
+    margin-left: 3%;
 }
 .promo1 h6{
     font-family: Segoe UI , sans-serif;
-    color: #357AB4;
+    color:#357AB4;
     margin-left: 3%;
-    margin-top: -1.5%;
+    margin-top: 0.5%;
     position: absolute;
 }
 .map{
-    margin-left: 1%;
-    margin-top: -2%;
-    height: 26px;
-    width: 1%;
-    position: absolute;
+    margin-left: 2.5%;
 }
 
 .promo2{
     border: 1px solid black;
-    height: 493px;
+    height: 400px;
      width: 25%;
      background-color: whitesmoke;
      margin-left: 15%;
@@ -124,21 +128,17 @@
 }
 .promo2 h6{
     font-family: Segoe UI , sans-serif;
-    color: #357AB4;
+    color:#357AB4;
     margin-left: 3%;
-    margin-top: -1.5%;
+    margin-top: 0.5%;
     position: absolute;
 }
 .map{
-    margin-left: 1%;
-    margin-top: -2%;
-    height: 26px;
-    width: 1%;
-    position: absolute;
+    margin-left: 2.5%;
 }
 .promo3{
     border: 1px solid black;
-    height: 493px;
+    height: 400px;
      width: 25%;
      background-color: whitesmoke;
      margin-left: 15%;
@@ -151,21 +151,17 @@
 }
 .promo3 h6{
     font-family: Segoe UI , sans-serif;
-    color: #357AB4;
+    color:#357AB4;
     margin-left: 3%;
-    margin-top: -1.5%;
+    margin-top: 0.5%;
     position: absolute;
 }
 .map{
-    margin-left: 1%;
-    margin-top: -2%;
-    height: 26px;
-    width: 1%;
-    position: absolute;
+    margin-left: 2.5%;
 }
 .promo4{
     border: 1px solid black;
-    height: 493px;
+    height: 400px;
     width: 25%;
     background-color: whitesmoke;
     margin-left: 15%;
@@ -178,17 +174,13 @@
 }
 .promo4 h6{
     font-family: Segoe UI , sans-serif;
-    color: #357AB4;
+    color:#357AB4;
     margin-left: 3%;
-    margin-top: -1.5%;
+    margin-top: 0.5%;
     position: absolute;
 }
 .map{
-    margin-left: 1%;
-    margin-top: -2%;
-    height: 26px;
-    width: 1%;
-    position: absolute;
+    margin-left: 2.5%;
 }
 .bor{
     height: 25%;
@@ -201,17 +193,20 @@
 .bor h6{
 font-family: Segoe UI, sans-serif;
 color: #FFFFFF;
+margin-top: 4%;
+margin-left: 5%;
 }
 .bor h4{
     font-family: Segoe UI, sans-serif;
     color: #FFFFFF;
-    margin-top: 10%;
+    margin-top: 14%;
+    margin-left: 5%;
     }
     .divsfooter {
         width: 90%;
         height: 250px;;
         margin-left: 4pc;
-        margin-top: 22px;
+        margin-top: 5pc;
         display: flex;
     }
     .divsfooter div {
@@ -276,7 +271,6 @@ color: #FFFFFF;
         display: block;
         background-color: #688095;
         color: #CCCCCC;
-        margin-top: 4%;
     }
     .chfooter p:nth-of-type(1) {
         margin: 10px 0px 0px 150px;
@@ -346,6 +340,15 @@ color: #FFFFFF;
                 background-color: whitesmoke;
                 margin-left: -24%;
         }
+        .depart{
+            margin-top: -9%;
+        }
+        .maps{
+            margin-top: -4%;
+        }
+.h{
+    margin-top: -3%;
+}
         .promo2{
                 border: 1px solid black;
                 height: 500px;
@@ -381,6 +384,14 @@ color: #FFFFFF;
             }
             .maps h6{
                 margin-left: 5%;
+            }
+            .bor h6{
+                margin-top: 4%;
+                margin-left: 12%;
+            }
+            .bor h4{
+                margin-top: 15%;
+                margin-left: 12%;
             }
             .show-menu-btn,.hide-menu-btn{
                 display: block;
